<resources>
    <string name="app_name">Bike Tracker</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDr4HKRQRhVa4WyDunyhAxFMFhwEEqRu3E</string>
    <string name="delted_all_successfully">All sms logs deleted successfully</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="tips_turn_on_gps">Please turn on GPS before scanning</string>
    <string name="tips_connect_timeout">Connect timeout</string>
    <string name="tips_connect_fail">Connect fail</string>
    <string name="connection_state_connecting">Connecting</string>
    <string name="connection_state_connected">Connected</string>
    <string name="connection_state_disconnected">Disconnected</string>
    <string name="enable">Enable</string>
    <string name="location_permission">Location Permission</string>
    <string name="allow_bike_tracker_alarm_to_access_location">Allow Bike Tracker Alarm to Access location</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_for_track_the_real_time_ble_connectivity">Enable GPS for track the real time BLE connectivity</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="enable_bluetooth_for_connecting_bike_tracker_alarm">Enable Bluetooth for connecting Bike Tracker Alarm</string>
    <string name="notification_reader">Notification Reader</string>
    <string name="lbl_hint">This permission will allow the Bike Tracker Alarm\n to read your notifications of alert and notify\n in case any activity detect</string>
    <string name="draw_over_other_apps">Draw over other apps</string>
    <string name="lbl_notsupport">Device not supported BLE</string>
    <string name="lbl_connected">Device connected successfully</string>
    <string name="lbl_found">BLE device found successfully</string>
    <string name="lbl_notfound">BLE device not found</string>
    <string name="lbl_disconnect">Device disconnect successfully</string>
    <string name="lbl_setting">Setting</string>
    <string name="lbl_gpson">GPS Turn</string>
    <string name="lbl_gps_alrt">Please turn on GPS before scanning</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_already_connected">Device Already connected</string>
    <string name="lbl_wait">Please wait...</string>
    <string name="lbl_failed">Device Connect Failed</string>
    <string name="lbl_scan">BLE Scanning Start...</string>
    <string name="lbl_scan_wait">BLE Scanning progress please wait...</string>
    <string name="lbl_arm_sucess">Arm Successfully</string>
    <string name="lbl_disarm_sucess">Disarm Successfully</string>
    <string name="alert_disconnect">Are you sure you want to disconnect BLE Device?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_location_permission">This app needs permission to use MainActivity.this feature. You can grant them in app settings.</string>
    <string name="lbl_sms_permission">For checking log of your bike tracker please enable notification access of bike tracker log</string>
    <string name="lbl_enable_gps">Please enable GPS</string>
    <string name="lbl_connecting">Connecting...</string>
    <string name="lbl_connect_failed">Connecting failed</string>
    <string name="lbl_enable_bluetooth">Please enable bluetooth</string>
    <string name="lbl_ble_not_found">Ble Device Not Found</string>
    <string name="lbl_something_wrong">Something went wrong! Please try later</string>
    <string name="lbl_ble_scan_not_support">BLE Scan feature not supporting</string>
    <string name="lbl_on_sucess">Bluetooth on successfully</string>
    <string name="lbl_Notification">Enable Notification Access</string>
    <string name="lbl_noti_msg">For checking log of your bike tracker please enable notification access of bike tracker log</string>
    <string name="lbl_enable_permission">Enable permissions</string>
    <string name="lbl_enable_bike_log">Enable Bike Tracker Log</string>
    <string name="enable_noti_access">Enable Notification Access</string>
    <string name="lbl_alert_permission">Permissions Require</string>
    <string name="lbl_go_setting">GOTO SETTINGS</string>
    <string name="lbl_window_permission">Allow Bike Tracker to appear on top of other apps.</string>
    <string name="lbl_allow">Allow</string>
    <string name="lbl_discoonect_ble">Disconnect BLE</string>
</resources>